--- a/book.tex
+++ b/book.tex
@@ -61,7 +61,7 @@
 %\input{tex/16}
 %\input{tex/17}
 %\input{tex/18}
-%\input{tex/19}
+\input{tex/19}
 
 % Part III: Applications
 %\input{tex/Part3}
