--- a/tex/26.tex
+++ b/tex/26.tex
@@ -72,7 +72,7 @@ We will consider problems posed on a polygonal domain $\Omega \subset
 denoted by $\partial \Omega$, is decomposed into regions $\Gamma_{D}$
 and $\Gamma_{N}$ such that $\Gamma_{D} \cup \Gamma_{N} = \partial \Omega$
 and $\Gamma_{D} \cap \Gamma_{N} = \emptyset$.  The outward unit normal
-vector on $\partial \Omega$ is will be denoted by~$n$.  For time-dependent
+vector on $\partial \Omega$ will be denoted by~$n$.  For time-dependent
 problems, we will consider a time interval of interest~$I = (0, T]$
 and let superimposed dots denote time derivatives.  We will use $\Omega$
 to denote the current configuration of a solid body; that is, the domain
@@ -1560,7 +1560,7 @@ while t <= T:
     file << u
 \end{python}
 \caption{Continuation of Python code extract for solving for a dynamic
-problem in Figure~\ref{fig:oelgaard-1:time_ufl_code2}.}
+problem.}
 \label{fig:oelgaard-1:time_ufl_code2}
 \end{figure}
 
