Final proof-reading updates for Chapter 36.
Further comments to editors:

* Would prefer to have Figure 36.1 in color.

* Code block in subsubsection 36.6.2 is split over two pages and by a
  Figure. This decreases readability, looks ugly, and can hopefully be
  fixed by editors/publishers.

--- a/tex/36.tex
+++ b/tex/36.tex
@@ -13,7 +13,7 @@
 \newcommand{\rognesrt}[1]{\mathrm{RT}_{#1}}
 \newcommand{\rognesdg}[1]{\mathrm{DG}_{#1}}
 \newcommand{\rognesascot}{ASCoT}
-\newcommand{\rognespython}{python}
+\newcommand{\rognespython}{Python}
 
 Over the last five decades, there has been a substantial body of
 research on the theory of mixed finite element methods.  Mixed finite
@@ -88,7 +88,7 @@ Brezzi and how the stability constants involved can be computed
 through a set of eigenvalue problems. In
 Section~\ref{rognes:sec:automation}, a strategy for the automation of
 numerical stability testing is presented. In particular, a
-light-weight python module, \rognesascot{}~\citep{Rognes2009},
+light-weight \rognespython{} module, \rognesascot{}~\citep{Rognes2009},
 constructed on top of DOLFIN~\citep{LoggWells2010}, is described. This
 module is freely available as a \fenics{} Application
 at \url{https://launchpad.net/ascot}. The use and capabilities of this
@@ -104,7 +104,7 @@ and a discussion of limitations.
 \looseness-1{}The following simple example illustrates that discrete stability is
 indeed crucial for the approximation of saddle point problems. Let
 $\Omega = (0, 1)^2$ be the unit square in $\R^2$, and take $f = - 2
-\pi^2 \sin(\pi x)\break \sin(\pi y)$. Consider the following mixed
+\pi^2 \sin(\pi x) \sin(\pi y)$. Consider the following mixed
 formulation of the Poisson problem with homogeneous Dirichlet boundary
 conditions: for the given data $f \in L^2(\Omega)$, find $\sigma \in
 H(\Div, \Omega)$, and $u \in L^2(\Omega)$ such that
@@ -712,7 +712,6 @@ def compute_brezzi_infsup(b, (m, n), W, bc=None):
     n defining V and Q respectively and a function space W = V_h x
     Q_h, compute the Brezzi inf-sup constant.
     """
-
     # Define forms for eigenproblem
     (u, p) = TrialFunctions(W)
     (v, q) = TestFunctions(W)
@@ -763,7 +762,7 @@ for singular problems: it may fail to converge. A partial remedy may
 be to apply a shift-and-invert spectral transform with an appropriate
 shift factor to the eigenvalue problem. For more details on spectral
 transformations in \slepc{}, see
-\citet{HernandezRomanRomeroEtAl2009}. \rognesascot{} applies a
+\citep{HernandezRomanRomeroEtAl2009}. \rognesascot{} applies a
 shift-and-invert transform with a small shift factor by default for
 the Brezzi and \babuska{} inf-sup problems.
 
@@ -924,7 +923,7 @@ is indeed proven so \citep{RaviartThomas1977}. The Brezzi coercivity
 constant is equal to $1$ for all meshes tested and hence bounded from
 below. The Brezzi inf-sup constant definitely seems to be bounded from
 below. The constant will actually converge to the value $\sqrt{2} \pi
-(1 + 2 \pi^2)^{-1/2}$, see \citep{ArnoldRognes2009}.  The satisfactory
+(1 + 2 \pi^2)^{-1/2}$, see~\citep{ArnoldRognes2009}.  The satisfactory
 result observed in
 Figure~\ref{rognes:fig:example}\subref{rognes:fig:rt} is thus
 agreement with the general theory.
@@ -957,7 +956,7 @@ Brezzi inf-sup constants seem to be bounded from below, and so the
 method could theoretically be stabilized by a removal of the spurious
 modes. For a careful study of the stability of Lagrange elements for
 the mixed Laplacian on various mesh families,
-see \citet{ArnoldRognes2009}.
+see~\citep{ArnoldRognes2009}.
 
 The results may be more different than illustrated above. A truly
 stable method will be stable for any admissible tessellation family,
@@ -1021,6 +1020,7 @@ for W_hs in spaces:
     beta_hs = [compute_brezzi_infsup(b, (H1, L2), W_h) for W_h in W_hs]
     result = StabilityResult(InfSupCollection(beta_hs, "beta_h"))
 \end{python}
+
 Finally, \rognesascot{} provides an optimized mode where only the
 stability of a discretization family is detected and not possible
 reduced stabilities. This mode is off by default, but can easily be
@@ -1125,4 +1125,4 @@ Krylov-Schur solver easily fails to converge even with an applied
 shift-and-invert spectral transform. In such a case, one must either
 return to use a LAPACK-type solver or consider the \babuska{} constant
 directly.
-\endgroup 
+\endgroup
