--- a/tex/36.tex
+++ b/tex/36.tex
@@ -216,7 +216,7 @@ discretization, we need a precise definition of discrete stability and
 preferably conditions for such to hold. In this section,
 the \babuska{} and Brezzi stability conditions are described and
 motivated in the general abstract setting. The material presented here
-is largely taken from the classical references~\citep{Babuvska1972/73,
+is largely taken from the classical references~\citet{Babuvska1972/73,
 Brezzi1974, BrezziFortin1991}.
 
 For a Hilbert space $W$, we denote the norm on $W$ by
@@ -762,7 +762,7 @@ for singular problems: it may fail to converge. A partial remedy may
 be to apply a shift-and-invert spectral transform with an appropriate
 shift factor to the eigenvalue problem. For more details on spectral
 transformations in \slepc{}, see
-\citep{HernandezRomanRomeroEtAl2009}. \rognesascot{} applies a
+\citet{HernandezRomanRomeroEtAl2009}. \rognesascot{} applies a
 shift-and-invert transform with a small shift factor by default for
 the Brezzi and \babuska{} inf-sup problems.
 
@@ -923,7 +923,7 @@ is indeed proven so \citep{RaviartThomas1977}. The Brezzi coercivity
 constant is equal to $1$ for all meshes tested and hence bounded from
 below. The Brezzi inf-sup constant definitely seems to be bounded from
 below. The constant will actually converge to the value $\sqrt{2} \pi
-(1 + 2 \pi^2)^{-1/2}$, see~\citep{ArnoldRognes2009}.  The satisfactory
+(1 + 2 \pi^2)^{-1/2}$, see~\citet{ArnoldRognes2009}.  The satisfactory
 result observed in
 Figure~\ref{rognes:fig:example}\subref{rognes:fig:rt} is thus
 agreement with the general theory.
@@ -956,7 +956,7 @@ Brezzi inf-sup constants seem to be bounded from below, and so the
 method could theoretically be stabilized by a removal of the spurious
 modes. For a careful study of the stability of Lagrange elements for
 the mixed Laplacian on various mesh families,
-see~\citep{ArnoldRognes2009}.
+see~\citet{ArnoldRognes2009}.
 
 The results may be more different than illustrated above. A truly
 stable method will be stable for any admissible tessellation family,
